--- a/lang/optimus-de_DE.po
+++ b/lang/optimus-de_DE.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Optimus\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: KeyCDN\n"
 "POT-Creation-Date: 2015-06-16 19:46+0100\n"
 "PO-Revision-Date: 2015-06-17 13:03+0100\n"
-"Last-Translator: KeyCDN <optimus@keycdn.com>\n"
-"Language-Team: KeyCDN <optimus@keycdn.com>\n"
+"Last-Translator: KeyCDN\n"
+"Language-Team: KeyCDN\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
