--- a/lang/optimus-de_DE.po
+++ b/lang/optimus-de_DE.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Optimus\n"
 "Report-Msgid-Bugs-To: KeyCDN\n"
 "POT-Creation-Date: 2015-06-16 19:46+0100\n"
-"PO-Revision-Date: 2015-06-17 13:03+0100\n"
-"Last-Translator: KeyCDN\n"
+"PO-Revision-Date: 2015-06-29 14:23+0100\n"
+"Last-Translator: KeyCDN <optimus@keycdn.com>\n"
 "Language-Team: KeyCDN\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
@@ -230,3 +230,94 @@ msgstr ""
 "<p><strong>Optimus HQ Key</strong> ist abgelaufen. Ein neuer Optimus HQ Key "
 "kann auf <a href=\"https://optimus.io\" target=\"_blank\">optimus.io</a> "
 "erworben werden. Vielen Dank!</p>"
+
+#: inc/optimus_management.class.php:xx
+msgid "Optimus Bulk Optimizer"
+msgstr "Alle Bilder mit Optimus optimieren"
+
+#: inc/optimus_management.class.php:xx
+msgid "Optimize all images"
+msgstr "Bilder optimieren"
+
+#: inc/optimus_management.class.php:xx
+msgid ""
+"The Optimus bulk optimizer compresses all images that have not yet been "
+"compressed in your WordPress media library."
+msgstr ""
+"Mit diesem Werkzeug können alle Bilder in der WordPress Mediathek optimiert "
+"werden. Bereits optimierte Bilder werden ignoriert."
+
+#: inc/optimus_management.class.php:xx
+msgid ""
+"It is recommended to run the bulk image optimization with an Optimus HQ "
+"activated version due to the size limitation of the free version."
+msgstr ""
+"Es ist empfohlen zuerst die Optimus HQ Version zu aktivieren wegen der "
+"Grösseneinschränkung der kostenlosen Version."
+
+#: inc/optimus_management.class.php:xx
+msgid ""
+"Optimus found <strong>%d images</strong> in your WordPress media library."
+msgstr "Optimus hat <strong>%d Bilder</strong> in der Mediathek gefunden."
+
+#: inc/optimus_management.class.php:xx
+msgid ""
+"It might take a while until all images are optimized. This depends on the "
+"amount and size of the images."
+msgstr ""
+"Die Optimierung aller Bilder kann einige Zeit in Anspruch nehmen. Dies hängt "
+"von der Anzahl und der Grösse der Bilder ab."
+
+#: inc/optimus_management.class.php:xx
+msgid "Note: Do not close this tab during the optimization process."
+msgstr ""
+"Achtung: Während des Optimierungsprozesses darf dieses Fenster nicht "
+"geschlossen werden."
+
+#: inc/optimus_management.class.php:xx
+msgid "Completed"
+msgstr "Erledigt"
+
+#: inc/optimus.class.php:xx
+msgid "All images have been optimized."
+msgstr "Alle Bilder wurden optimiert."
+
+#: inc/optimus.class.php:xx
+msgid "Optimize images"
+msgstr "Bilder optimieren"
+
+#: inc/optimus.class.php:xx
+msgid "Optimizing"
+msgstr "Optimierung läuft"
+
+#: inc/optimus.class.php:xx
+msgid "optimized"
+msgstr "optimiert"
+
+#: inc/optimus.class.php:xx
+msgid "Internal error"
+msgstr "Interner Fehler"
+
+#: inc/optimus.class.php:xx
+msgid "Waiting"
+msgstr "Ausstehend"
+
+#: inc/optimus_request.class.php:xx
+msgid "Invalid request"
+msgstr "Ungültige Anfrage"
+
+#: inc/optimus_request.class.php:xx
+msgid "Permission missing (upload_files)"
+msgstr "Berechtigung fehlt (upload_files)"
+
+#: inc/optimus_request.class.php:xx
+msgid "Metadata missing"
+msgstr "Metadata nicht gefunden"
+
+#: inc/optimus_request.class.php:xx
+msgid "Already optimized"
+msgstr "Bereits optimiert"
+
+#: inc/optimus_request.class.php:xx
+msgid "Optimus HQ required"
+msgstr "Optimus HQ benötigt"
