--- a/lang/optimus-de_DE.po
+++ b/lang/optimus-de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Optimus\n"
 "Report-Msgid-Bugs-To: KeyCDN\n"
 "POT-Creation-Date: 2015-06-16 19:46+0100\n"
-"PO-Revision-Date: 2015-06-29 14:23+0100\n"
+"PO-Revision-Date: 2015-07-06 21:03+0100\n"
 "Last-Translator: KeyCDN <optimus@keycdn.com>\n"
 "Language-Team: KeyCDN\n"
 "Language: de_DE\n"
@@ -224,8 +224,8 @@ msgstr ""
 #: inc/optimus_hq.class.php:xx
 msgid ""
 "<p><strong>Optimus HQ license key</strong> has expired. Get a new Optimus HQ "
-"license key on <a href=\"https://optimus.io\" target=\"_blank\">optimus.io</"
-"a>. Thank you!</p>"
+"license key on <a href=\"https://optimus.io/en/\" target=\"_blank\">optimus."
+"io</a>. Thank you!"
 msgstr ""
 "<p><strong>Optimus HQ Key</strong> ist abgelaufen. Ein neuer Optimus HQ Key "
 "kann auf <a href=\"https://optimus.io\" target=\"_blank\">optimus.io</a> "
