settings update for webp integration
git-svn-id: https://plugins.svn.wordpress.org/optimus/trunk@1278668 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/optimus-de_DE.po
+++ b/lang/optimus-de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Optimus\n"
 "Report-Msgid-Bugs-To: KeyCDN\n"
 "POT-Creation-Date: 2015-06-16 19:46+0100\n"
-"PO-Revision-Date: 2015-09-22 12:31+0100\n"
+"PO-Revision-Date: 2015-11-03 15:48+0100\n"
 "Last-Translator: KeyCDN <optimus@keycdn.com>\n"
 "Language-Team: KeyCDN\n"
 "Language: de_DE\n"
@@ -148,30 +148,22 @@ msgid "WebP files"
 msgstr "WebP-Dateien"
 
 #: inc/optimus_settings.class.php:xx
-msgid ""
-"Only for experienced users. Modification of your web server configuration "
-"required.\\n\\nActivate option?"
-msgstr ""
-"Nur für erfahrene Nutzer, da Anpassung der Server-Konfigurationsdatei und "
-"Qualitätskontrolle notwendig.\\n\\nOption aktivieren?"
-
-#: inc/optimus_settings.class.php:xx
 msgid "Creation of WebP files"
 msgstr "Anfertigung der WebP-Dateien"
 
 #: inc/optimus_settings.class.php:xx
 msgid ""
-"Only <a href=\"https://optimus.io\" target=\"_blank\">Optimus HQ</a>. "
-"Modification of the server configuration file and verification of output "
-"required. Slows down the optimization process. [<a href=\"https://optimus.io/"
-"support/convert-jpeg-and-png-to-webp-image-format/\" target=\"_blank"
-"\">Details</a>]"
+"Only <a href=\"https://optimus.io\" target=\"_blank\">Optimus HQ</a>. It is "
+"recommended to use the <a href=\"https://wordpress.org/plugins/cache-enabler/"
+"\">Cache Enabler plugin</a> to integrate the WebP images. [<a href=\"https://"
+"optimus.io/support/convert-jpeg-and-png-to-webp-image-format/\" target="
+"\"_blank\">Details</a>]"
 msgstr ""
-"Nur <a href=\"https://optimus.io\" target=\"_blank\">Optimus HQ</a>. "
-"Modifizierung der Server-Konfigurationsdatei und Überprüfung der Ausgabe "
-"erforderlich. Verlangsamt den Optimierungsprozess. [<a href=\"https://plus."
-"google.com/114450218898660299759/posts/3emb7o4368X\" target=\"_blank"
-"\">Details</a>]"
+"Nur <a href=\"https://optimus.io\" target=\"_blank\">Optimus HQ</a>. Mit dem "
+"<a href=\"https://wordpress.org/plugins/cache-enabler/\">Cache Enabler "
+"Plugin</a> können die WebP Bilder einfach integriert werden. [<a href="
+"\"https://plus.google.com/114450218898660299759/posts/3emb7o4368X\" target="
+"\"_blank\">Details</a>]"
 
 #: inc/optimus_settings.class.php:xx
 msgid "HTTPS connection"
